--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,5 +28,6 @@ jobs:
       with:
         context: .
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/firefox-chinese:${{ env.date_tag }},
               ${{ secrets.DOCKER_HUB_USERNAME }}/firefox-chinese:latest
